--- a/blog-web/src/main/webapp/view/formPost.html
+++ b/blog-web/src/main/webapp/view/formPost.html
@@ -10,7 +10,7 @@
 			<p style="width: 180px;" ng-if="!post.id">
 				<input  type="text" class="form-control" ng-model="post.usuario" ng-required="true" placeholder="Usuário (Obrigatório) "/>
 			</p>
-			<p><input type="text" class="form-control" ng-model="post.titulo" ng-required="true" placeholder="Título (Obrigatório) " ng-/></p>
+			<p><input type="text" class="form-control" ng-model="post.titulo" ng-required="true" placeholder="Título (Obrigatório) "/></p>
 			<p><textarea class="form-control" ng-model="post.texto" ng-required="true" rows="15"></textarea></p>
 			<div class="post-buttons">
 				<button type="submit" class="btn btn-default" ng-click="save()" ng-disabled="postForm.$invalid">Salvar</button>
