--- a/blog-web/src/main/webapp/view/listPost.html
+++ b/blog-web/src/main/webapp/view/listPost.html
@@ -8,7 +8,7 @@
 	<div ng-controller="PostController" ng-init="listar()">
       <div class="blog-post" ng-repeat="post in posts">
    		<h2 class="blog-post-title clicavel" ng-click="ver(post)">{{post.titulo}}</h2>
-        <p class="blog-post-meta">{{post.dataRegistro | date:"MM/dd/yyyy @ hh:mm"}} by <a href="#">{{post.usuario}}</a></p>
+        <p class="blog-post-meta">{{post.dataRegistro | date}} by <a href="#">{{post.usuario}}</a></p>
         <p>{{post.texto | limitarTexto: 500 }}</p>
       </div><!-- /.blog-post -->
       
