controle de login, refatoramento...

--- a/blogYo/app/styles/blog.css
+++ b/blogYo/app/styles/blog.css
@@ -1,7 +1,10 @@
 /*
  * Globals
  */
-
+ [ng\:cloak], [ng-cloak], .ng-cloak {
+   display: none !important;
+ }
+ 
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
