refatoramento de acordo com o style guide do John Papa

--- a/blogYo/app/views/components/modalConfirm.html
+++ b/blogYo/app/views/components/modalConfirm.html
@@ -6,6 +6,6 @@
 	Tem certeza que deseja apagar o post? Pense bem hein...
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()">Sim</button>
-	<button class="btn btn-warning" ng-click="cancel()">Melhor não</button>
+	<button class="btn btn-primary" ng-click="modalCtrl.ok()">Sim</button>
+	<button class="btn btn-warning" ng-click="modalCtrl.cancel()">Melhor não</button>
 </div>
