--- a/blogYo/app/views/formPost.html
+++ b/blogYo/app/views/formPost.html
@@ -1,15 +1,15 @@
 <meta charset="UTF-8">
-<div ng-controller="PostEditController">
+<div ng-controller="PostEditController as editCtrl">
 	<h2>Post</h2>
 	<form name="postForm">
-		<p style="width: 180px;" ng-if="!post.id">
-			<input  type="text" class="form-control" ng-model="post.usuario" ng-required="true" placeholder="Usuário (Obrigatório) "/>
+		<p style="width: 180px;" ng-if="!editCtrl.post.id">
+			<input  type="text" class="form-control" ng-model="editCtrl.post.usuario" ng-required="true" placeholder="Usuário (Obrigatório) "/>
 		</p>
-		<p><input type="text" class="form-control" ng-model="post.titulo" ng-required="true" placeholder="Título (Obrigatório) "/></p>
-		<p><textarea class="form-control" ng-model="post.texto" ng-required="true" rows="15"></textarea></p>
+		<p><input type="text" class="form-control" ng-model="editCtrl.post.titulo" ng-required="true" placeholder="Título (Obrigatório) "/></p>
+		<p><textarea class="form-control" ng-model="editCtrl.post.texto" ng-required="true" rows="15"></textarea></p>
 		<div class="post-buttons">
-			<button type="submit" class="btn btn-default" ng-click="salvar()" ng-disabled="postForm.$invalid">{{!post.id? 'Salvar' : 'Editar'}}</button>
-			<button type="reset" class="btn btn-default" ng-click="reset()">Limpar</button>
+			<button type="submit" class="btn btn-default" ng-click="editCtrl.salvar()" ng-disabled="postForm.$invalid">{{!editCtrl.post.id? 'Salvar' : 'Editar'}}</button>
+			<button type="reset" class="btn btn-default" ng-click="editCtrl.reset()">Limpar</button>
 			<a href="#/">voltar</a>
 		</div>
 	</form>
