--- a/blogYo/app/views/listPost.html
+++ b/blogYo/app/views/listPost.html
@@ -1,12 +1,12 @@
 <meta charset="UTF-8">
-<div ng-controller="PostListController">
-     <div class="blog-post" ng-repeat="post in posts">
+<div ng-controller="PostListController as listCtrl">
+     <div class="blog-post" ng-repeat="post in listCtrl.posts">
   		<h2 class="blog-post-title clicavel" ui-sref="viewPost({id:post.id})">{{post.titulo}}</h2>
        <p class="blog-post-meta">{{post.dataRegistro | date}} by <a href="#">{{post.usuario}}</a></p>
-       <p>{{post.texto | limitarTexto: 500 }}</p>
+       <p>{{post.texto | limitText: 500 }}</p>
      </div><!-- /.blog-post -->
-     
-     <!-- 
+
+     <!--
      <nav>
        <ul class="pager">
          <li><a href="#">Previous</a></li>
