refatorando e isolando as funcionalidades

--- a/blogYo/app/views/listPost.html
+++ b/blogYo/app/views/listPost.html
@@ -1,10 +1,10 @@
 <meta charset="UTF-8">
-<div ng-controller="PostListController as listCtrl">
-     <div class="blog-post" ng-repeat="post in listCtrl.posts">
-  		<h2 class="blog-post-title clicavel" ui-sref="viewPost({id:post.id})">{{post.titulo}}</h2>
-       <p class="blog-post-meta">{{post.dataRegistro | date}} by <a href="#">{{post.usuario}}</a></p>
-       <p>{{post.texto | limitText: 500 }}</p>
-     </div><!-- /.blog-post -->
+<div>
+  <div class="blog-post" ng-repeat="post in vm.posts">
+   <h2 class="blog-post-title clicavel" ui-sref="viewPost({id:post.id})">{{post.titulo}}</h2>
+   <p class="blog-post-meta">{{post.dataRegistro | date}} by <a href="#">{{post.usuario}}</a></p>
+   <p>{{post.texto | limitarTexto: 500 }}</p>
+  </div><!-- /.blog-post -->
 
      <!--
      <nav>
