--- a/blogYo/app/views/viewPost.html
+++ b/blogYo/app/views/viewPost.html
@@ -1,15 +1,15 @@
 <meta charset="UTF-8">
-<div ng-controller="PostDetailController as detailCtrl">
+<div>
 	<div class="blog-post">
   			<h2 class="blog-post-title" ng-mouseover="showMenuPost = true" ng-mouseleave="showMenuPost = false">
-  				<span>{{detailCtrl.post.titulo}}</span>
-   			<div class="blog-post-menu" ng-if="detailCtrl.isEditable()" ng-show="showMenuPost">
-					<a title="editar" ui-sref="editPost({id:detailCtrl.post.id})"><i class="glyphicon glyphicon-pencil"></i>editar</a>
-					<a title="apagar" class="clicavel" ng-click="detailCtrl.deletar()"><i class="glyphicon glyphicon-trash" ></i>apagar</a>
+  				<span>{{vm.post.titulo}}</span>
+   			<div class="blog-post-menu" ng-if="vm.isEditable()" ng-show="showMenuPost">
+					<a title="editar" ui-sref="editPost({id:vm.post.id})"><i class="glyphicon glyphicon-pencil"></i>editar</a>
+					<a title="apagar" class="clicavel" ng-click="vm.deletar()"><i class="glyphicon glyphicon-trash" ></i>apagar</a>
    			</div>
   			</h2>
-       	<p class="blog-post-meta">{{detailCtrl.post.dataRegistro | date:"MM/dd/yyyy @ hh:mm"}} by <a href="#">{{detailCtrl.post.usuario}}</a></p>
-       	<p>{{detailCtrl.post.texto}}</p>
+       	<p class="blog-post-meta">{{vm.post.dataRegistro | date:"MM/dd/yyyy @ hh:mm"}} by <a href="#">{{vm.post.usuario}}</a></p>
+       	<p>{{vm.post.texto}}</p>
    	</div>
 
 	<div class="panel panel-default" ng-controller="ComentarioController as commentCtrl">
