--- a/blogYo/app/views/post/post.form.html
+++ b/blogYo/app/views/post/post.form.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<div ng-controller="PostEditController as editCtrl">
+<div>
 	<h2>Post</h2>
 	<form name="postForm">
 		<p style="width: 180px;" ng-if="!editCtrl.post.id">
