--- a/blogYo/app/views/post/post.list.html
+++ b/blogYo/app/views/post/post.list.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <div>
   <div class="blog-post" ng-repeat="post in vm.posts">
-   <h2 class="blog-post-title clicavel" ui-sref="viewPost({id:post.id})">{{post.titulo}}</h2>
+   <h2 class="blog-post-title clicavel" ui-sref="post.detail({id: post.id})">{{post.titulo}}</h2>
    <p class="blog-post-meta">{{post.dataRegistro | date}} by <a href="#">{{post.usuario}}</a></p>
    <p>{{post.texto | limitarTexto: 500 }}</p>
   </div><!-- /.blog-post -->
