--- a/blogYo/app/styles/blog.css
+++ b/blogYo/app/styles/blog.css
@@ -4,7 +4,7 @@
  [ng\:cloak], [ng-cloak], .ng-cloak {
    display: none !important;
  }
- 
+
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
@@ -144,20 +144,24 @@ h6, .h6 {
 .blog-post {
   margin-bottom: 60px;
 }
+.blog-post-menu{
+  font-size: 10px;
+}
 .blog-post-title {
   margin-bottom: 5px;
   font-size: 40px;
 }
-.blog-post-meta {
+.blog-post-subtitle {
   margin-bottom: 20px;
   color: #999;
 }
+.blog-post-text{
 
-.blog-post-menu{
-  font-size: 10px;
+color: #777;
+font: 22px/1.82 "helveticaneuelight",sans-serif;
+letter-spacing: .38px;
+
 }
-
-
 /*
  * Footer
  */
