--- a/blogYo/app/views/post/post.form.html
+++ b/blogYo/app/views/post/post.form.html
@@ -3,10 +3,10 @@
 	<h2>Post</h2>
 	<form name="postForm">
 		<p style="width: 180px;" ng-if="!editCtrl.post.id">
-			<input  type="text" class="form-control" ng-model="editCtrl.post.usuario" ng-required="true" placeholder="Usuário (Obrigatório) "/>
+			<input  type="text" class="form-control" ng-disabled="editCtrl.post.usuario" ng-model="editCtrl.post.usuario" ng-required="true" placeholder="Usuário (Obrigatório) "/>
 		</p>
 		<p><input type="text" class="form-control" ng-model="editCtrl.post.titulo" ng-required="true" placeholder="Título (Obrigatório) "/></p>
-		<p><textarea class="form-control" ng-model="editCtrl.post.texto" ng-required="true" rows="15"></textarea></p>
+		<div text-angular ng-model="editCtrl.post.texto" ng-required="true"></div>
 		<div class="post-buttons">
 			<button type="submit" class="btn btn-default" ng-click="editCtrl.salvar()" ng-disabled="postForm.$invalid">{{!editCtrl.post.id? 'Salvar' : 'Editar'}}</button>
 			<button type="reset" class="btn btn-default" ng-click="editCtrl.reset()">Limpar</button>
