--- a/blog/blog-api/src/main/frontend/app/views/post/post.form.html
+++ b/blog/blog-api/src/main/frontend/app/views/post/post.form.html
@@ -8,8 +8,14 @@
 		<p><input type="text" class="form-control" ng-model="editCtrl.post.titulo" ng-required="true" placeholder="Título (Obrigatório) "/></p>
 		<div text-angular ng-model="editCtrl.post.texto" ng-required="true"></div>
 		<div class="post-buttons">
-			<button type="submit" class="btn btn-default" ng-click="editCtrl.salvar()" ng-disabled="postForm.$invalid">{{!editCtrl.post.id? 'Salvar' : 'Editar'}}</button>
-			<button type="reset" class="btn btn-default" ng-click="editCtrl.reset()">Limpar</button>
+			<button type="submit" class="btn btn-default" ng-click="editCtrl.salvar()" ng-disabled="postForm.$invalid">
+				<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+				{{!editCtrl.post.id? 'Salvar' : 'Editar'}}
+			</button>
+			<button type="reset" class="btn btn-default" ng-click="editCtrl.reset()">
+				<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+				Limpar
+			</button>
 			<a href="#/">voltar</a>
 		</div>
 	</form>
