--- a/blog/blog-api/src/main/frontend/app/styles/animations.css
+++ b/blog/blog-api/src/main/frontend/app/styles/animations.css
@@ -1,48 +1,35 @@
-.view-frame.ng-enter, .view-frame.ng-leave {
-  top: 0;
-  left: 0;
-  right: 0;
+.view-frame.ng-leave ,
+.view-frame.ng-enter {
+  position: relative ;
+  top: 0 ;
+  width: 100% ;
 }
 
 .view-frame.ng-enter {
   -webkit-animation: 1s fade-in;
-  -moz-animation: 1s fade-in;
-  -o-animation: 1s fade-in;
   animation: 1s fade-in;
-  z-index: 100;
 }
 
 .view-frame.ng-leave {
-  -webkit-animation: 0.5s fade-out;
-  -moz-animation: 0.5s fade-out;
-  -o-animation: 0.5s fade-out;
-  animation: 0.5s fade-out;
-  z-index:99;
+  -webkit-animation: 1s fade-out;
+  animation: 1s fade-out;
 }
-
 
 @keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from { opacity: 0; left: 100%; }
+  to { opacity: 1; left: 0;}
 }
-@-moz-keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+
 @-webkit-keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from { opacity: 0; left: 100%; }
+  to { opacity: 1; left: 0;}
 }
 
 @keyframes fade-out {
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-@-moz-keyframes fade-out {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from { opacity: 1; left: 0; }
+  to { opacity: 0; left: -100%; }
 }
 @-webkit-keyframes fade-out {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from { opacity: 1; left: 0; }
+  to { opacity: 0; left: -100%; }
 }
